fixed table persistent scrollbar

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -127,7 +127,7 @@ table {
     table-layout: fixed;
     width: 100%;
     word-wrap: break-word;
-    overflow-x: scroll;
+    overflow-x: auto;
     display: inline-block;
 }
 
